--- a/index.html
+++ b/index.html
@@ -200,6 +200,7 @@
                             <th>Valor en dolares</th>
                             <th>Valor en euros</th>
                             <th>Valor en yenes</th>
+                            <th>Valor en bolivares</th>
                         </tr>
 
                     </thead>
@@ -209,12 +210,15 @@
                             <td id="dolarBasico"></td>
                             <td id="euroBasico"></td>
                             <td id="yenBasico"></td>
+                             <td id="basic"></td>
                         </tr>
                         <tr>
                             <td id="basico">Premium</td>
                             <td id="dolarPremium"></td>
                             <td id="euroPremium"></td>
                             <td id="yenPremium"></td>
+                            <td id="premium"></td>
+                            
                         </tr>
                         
                     </tbody>
