--- a/index.html
+++ b/index.html
@@ -123,12 +123,12 @@
             </div>
             <div class="myslides fade">
                 <img style=
-                "width: 50%; height: 30%; object-fit: cover;" src="img/Portadas_libros/groundedforalleternity.jfif" alt="Intothegrey">
+                "width: 50%; height: 30%; object-fit: cover;" src="img/Portadas_libros/groundedforalleternity.jfif" alt="grounded for all eternity">
             </div>
             
             <div class="myslides fade">
                 <img style=
-                "width: 50%; height: 30%; object-fit: cover;" src="img/Portadas_libros/Thelastdaughther.jfif" alt="Catch the wind">
+                "width: 50%; height: 30%; object-fit: cover;" src="img/Portadas_libros/Thelastdaughther.jfif" alt="The last daughther">
             </div>
             
 
