--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     <section id="planes" class="contenido plan">
 
         <article class="texto">
-            <h2 class="title">Precio</h2>
+            <h2 class="title">Planes</h2>
             <p >En Letras Encantadas, creemos en hacer que la lectura sea accesible para todos. Nuestros planes de suscripción han sido diseñados cuidadosamente para ofrecerte opciones flexibles y asequibles, adaptadas a tus preferencias y necesidades literarias. Explora nuestros planes a continuación:
             </p>
         </article>
