--- a/index.html
+++ b/index.html
@@ -267,6 +267,8 @@
             <input type="email" id="email" name="correo" required><br><br>
             
             <input type="submit" value="Continuar">
+
+           <a href="letras_encantadas.html">ENTRAR (Developer mode)</a>
         </form>
 
         
